<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_screen"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size" />

    <Button
        android:id="@+id/main_search"
        style="@style/main_buttons"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/main_media"
        style="@style/main_buttons"
        android:layout_marginTop="16dp"
        android:text="@string/media"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/main_settings"
        style="@style/main_buttons"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>